--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.10.1",
     "sequelize": "^6.37.3"
   },
-  "devDependencies": {},
   "description": ""
 }
